<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profileDetailsVM" type="com.dhanusrisapplication.app.modules.profiledetails.data.viewmodel.ProfileDetailsVM"/>
    </data>
    <LinearLayout android:id="@+id/linearProfiledetails"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_7pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft_black_901"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_black_901"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtProfile"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_weight="0.86"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profileDetailsVM.profileDetailsModel.txtProfile}"
                    style="@style/txtIntersemibold16" tools:text="@string/lbl_profile"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView android:ellipsize="end"
            android:id="@+id/txtProfiledetails"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{profileDetailsVM.profileDetailsModel.txtProfiledetails}"
            style="@style/txtIntersemibold24" tools:text="@string/lbl_profile_details"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_100_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_ruben"
            android:id="@+id/etInputinitial" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={profileDetailsVM.profileDetailsModel.etInputinitialValue}"
            android:textColorHint="@color/gray_600"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtHelpertexther"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{profileDetailsVM.profileDetailsModel.txtHelpertexther}"
            style="@style/txtPoppinsregular12" tools:text="@string/msg_helper_text_her"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_100_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_geidt"
            android:id="@+id/etInputinitialOne" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_75pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={profileDetailsVM.profileDetailsModel.etInputinitialOneValue}"
            android:textColorHint="@color/gray_600"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <LinearLayout android:id="@+id/linearInputinitial"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_75pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylegray_1">
            <TextView android:ellipsize="end"
                android:id="@+id/txtPlaceholder"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_weight="0.9" android:layout_width="0dp"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@{profileDetailsVM.profileDetailsModel.txtPlaceholder}"
                style="@style/txtInterregular16" tools:text="@string/msg_23_december_19"/>
            <ImageView android:id="@+id/imageCalendar"
                android:layout_height="@dimen/_20pxh"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_150pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="@dimen/_18pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_calendar"
                tools:ignore="ContentDescription" tools:src="@drawable/img_calendar"/>
        </LinearLayout>
        <EditText
            android:background="@drawable/rectangle_bg_gray_100_radius_8"
            android:ellipsize="end"
            android:hint="@string/msg_ruben_geidt_exa"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_75pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={profileDetailsVM.profileDetailsModel.etEmailValue}"
            android:textColorHint="@color/gray_401"
            style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtHelpertextherOne"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.02" android:singleLine="true"
            android:text="@{profileDetailsVM.profileDetailsModel.txtHelpertextherOne}"
            style="@style/txtInterregular12" tools:text="@string/msg_your_email_addr"/>
    </LinearLayout>
</layout>
